# advanced_django

./: pyproject.toml
02_01_b/friendsbook/post/: models.py
02_01_e/friendsbook/friendsbook/: settings.py
02_03_e/friendsbook/friendsbook/: settings.py
02_03_e/friendsbook/profilepage/templates/: profilepage.html
02_04_e/friendsbook/profilepage/templates/: profilepage.html
03_03_e/friendsbook/friendsbook/: settings.py
04_01/friendsbook/friendsbook/: settings.py
04_03/friendsbook/profilepage/templates/: profilepage.html
05_01_b/friendsbook/profilepage/templates/: profilepage.html
05_01_e/friendsbook/profilepage/templates/: profilepage.html
05_02_b/friendsbook/profilepage/templates/: profilepage.html
05_02_e/friendsbook/friendsbook/: settings.py
05_03_e/friendsbook/friendsbook/: settings.py
05_04_b/friendsbook/friendsbook/: settings.py
06_01_e/friendsbook/friendsbook/: settings.py
06_01_e/friendsbook/profilepage/templates/: profilepage.html
06_01_e/friendsbook/useraccount/templates/registration/: login.html
06_02_b/friendsbook/friendsbook/: settings.py
06_03_e/friendsbook/friendsbook/: settings.py
06_03_e/friendsbook/post/templates/: header.html
06_04_b/friendsbook/friendsbook/: settings.py
06_04_e/friendsbook/friendsbook/: settings.py
