[tool.poetry]
name = "advanced-django"
version = "0.1.0"
description = ""
authors = ["Marcus Cruz <marcus.v.s.c13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
django-bootstrap5 = "^23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
